modificacion de cards grid

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/Ambientes/ambiente 1.jpg" class="carouselFondo d-block w-100"
+                <img src="images/Ambientes/ambiente 1.jpg" class="img-fluid carouselFondo d-block w-100"
                     alt="Ambiente color blanco">
             </div>
             <div class="carousel-item">
@@ -93,12 +93,12 @@
     </div>
 
     <!-- Main Content -->
-    <section class="mainContent">
+    <section class="mainContent homeMain">
         <Main>
             <div data-aos="fade-up">
                 <div class="container text-center">
                     <div class="row">
-                        <div class="col">
+                        <div class="col somos-home-maker">
                             <h1>Somos Home Maker</h1>
                             <p>10 Años creando y decorando para disfrute y confort del ambiente de nuestros usuarios,
                                 creemos
@@ -110,128 +110,148 @@
                                 nuestros Equipamientos vienen con una garantia de 2 años</p>
                         </div>
                     </div>
-        </div>
+                </div>
         </Main>
-<!-- Fin Main Content -->
+        <!-- Fin Main Content -->
 
-<!-- MUESTRA DE PRODUCTOS A OFRECER -->
-<section class="muestraProductos Cardshow">
-    <h2 class="queofrecemos">Que Ofrecemos</h2>
+        <!-- MUESTRA DE PRODUCTOS A OFRECER -->
+        <section class="muestraProductos Cardshow">
+            <h2 class="queofrecemos">Que Ofrecemos</h2>
 
-    <div class="container1 text-center">
-        <div class="row">
 
-            <!-- Card 1 -->
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="images/Camas-Respaldo/cama7.jpg" class="card-img-top" alt="Cama con respaldo madera">
-                <div class="card-body">
-                  <p class="card-text">De nuestras mejores camas/sommier con respaldo para un buen descanso , para un mejor confort.</p>
-                </div>
-              </div>
-          </div>
+            <!-- Columna de 3 por seccion -->
 
-          <!-- Card 2 -->
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img src="images/Kit-Baño/kit4.jpg" class="card-img-top" alt="Baño equipado">
-                <div class="card-body">
-                  <p class="card-text">Ofrecemos de nuestra gama de productos selectos varios kit de instalacion para el baño completo, esta incluido en nuestros presupuestos.</p>
-                </div>
-              </div>
-          </div>
-        </div>
-
-        <div class="container2 text-center">
-
-            <div class="row">
-                <!-- Card 3 -->
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/Mesada-Cocina/Mesada4.jpg" class="card-img-top" alt="Mesada marmol negro">
-                    <div class="card-body">
-                      <p class="card-text">Siempre es bueno cocinar con buen espacio para manejar lo utensilios ,como manipular los alimentos , por eso ofrecemos nuestro set de mesada con bacha.</p>
-                    </div>
-                  </div>
-              </div>
-
-              <!-- Card 4 -->
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top" alt="Mesa patas de madera con sillas">
-                    <div class="card-body">
-                      <p class="card-text">La sala de estar es importante a la hora de recibir invitados , para eso tenemos mesas y sillas que ofrecen estilo y adorno en un solo conjunto de mueble para la sala.</p>
-                    </div>
-                  </div>
-              </div>
-            </div>
-
-            <div class="container3 text-center">
-
+            <div class="container text-center">
                 <div class="row">
-                    <!-- Card 5 -->
-                  <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="images/Sillones/sillon 7.png" class="card-img-top" alt="Silon cuero negro">
-                        <div class="card-body">
-                          <p class="card-text">Nada como llegar a la casa luego de un largo dia y poder disfrutar de mirar una pelicula o el partido del equipo favorito , para eso tenemos nuestros sillones premium.</p>
+                    <!-- Card 1. -->
+                    <div class="col">
+                        <div class="card card1" style="width: 18rem;">
+                            <img src="images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top"
+                                alt="Mesa patas de madera con sillas">
+                            <div class="card-body">
+                                <p class="card-text">La sala de estar es importante a la hora de recibir invitados ,
+                                    para eso tenemos mesas y sillas que ofrecen estilo y adorno en un solo conjunto de
+                                    mueble para la sala.</p>
+                            </div>
                         </div>
-                      </div>
-                  </div>
-    
-                  <!-- Card 6 -->
-                  <div class="col">
-                    <div class="card" style="width: 18rem;" >
-                        <img src="images/Tv-Mueble/Tv7.jpg" class="card-img-top" alt="Mueble de mesa madera prensada">
-                        <div class="card-body" >
-                          <p class="card-text">Se vienen los partidos mas interesantes de la temporada , y que mejor que tener un buen mueble para apoyar la television y un buen equipo de sonido.</p>
+                    </div>
+                    <!-- Fin Card 1. -->
+                    <!-- Card 2. -->
+                    <div class="col">
+                        <div class="card card2" style="width: 18rem;">
+                            <img src="images/Sillones/sillon 7.png" class="card-img-top" alt="Silon cuero negro">
+                            <div class="card-body">
+                                <p class="card-text">Nada como llegar a la casa luego de un largo dia y poder disfrutar
+                                    de mirar una pelicula o el partido del equipo favorito , para eso tenemos nuestros
+                                    sillones premium.</p>
+                            </div>
                         </div>
-                      </div>
-                  </div>
+                    </div>
+                    <!-- Fin Card 2. -->
+
+                    <!-- Card 3. -->
+                    <div class="col">
+                        <div class="card card3" style="width: 18rem;">
+                            <img src="images/Tv-Mueble/Tv7.jpg" class="card-img-top"
+                                alt="Mueble de mesa madera prensada">
+                            <div class="card-body">
+                                <p class="card-text">Se vienen los partidos mas interesantes de la temporada , y que
+                                    mejor que tener un buen mueble para apoyar la television y un buen equipo de sonido.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin card 3. -->
                 </div>
-    
-</section>
-
-
-    <!-- Comienzo del Footer -->
-    <footer class="footerLinks">
-        <div class="container text-center">
-            <div class="row">
-            <div class="col">
-            <!-- Navegacion entre paginas -->
-            <section class="footerNav">
-            <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
-            <li><a href="pages/contactanos.html">Contactanos</a></li>
-            <li><a href="pages/productos.html">Productos</a></li>
-            </ul>
-            </section>
             </div>
-            <div class="col">
-            <!-- Redes Sociales -->
-            <section class="redesSociales">
-            <ul class="listasRedes">
-            <li><a href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a></li>
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-            </ul>
-            </section>
-            </div>
-            </div>
-</footer>
-<!-- Final del footer -->
 
-<!-- Script de bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-crossorigin="anonymous"></script>
+            <div class="container text-center">
+                <div class="row">
+                    <!-- Card 4. -->
+                    <div class="col">
+                        <div class="card card4" style="width: 18rem;">
+                            <img src="images/Camas-Respaldo/cama7.jpg" class="card-img-top"
+                                alt="Cama con respaldo madera">
+                            <div class="card-body">
+                                <p class="card-text">De nuestras mejores camas/sommier con respaldo para un buen
+                                    descanso , para un mejor confort.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin card 4. -->
 
-<!-- Aos Script -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-AOS.init();
-</script>
+                    <!-- Card 5. -->
+                    <div class="col">
+                        <div class="card card5" style="width: 18rem;">
+                            <img src="images/Kit-Baño/kit4.jpg" class="card-img-top" alt="Baño equipado">
+                            <div class="card-body">
+                                <p class="card-text">Ofrecemos de nuestra gama de productos selectos varios kit de
+                                    instalacion para el baño completo, esta incluido en nuestros presupuestos.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin card 5. -->
+
+
+                    <!-- Card 6. -->
+                    <div class="col">
+                        <div class="card card6" style="width: 18rem;">
+                            <img src="images/Mesada-Cocina/Mesada4.jpg" class="card-img-top" alt="Mesada marmol negro">
+                            <div class="card-body">
+                                <p class="card-text">Siempre es bueno cocinar con buen espacio para manejar lo
+                                    utensilios ,como manipular los alimentos , por eso ofrecemos nuestro set de mesada
+                                    con bacha.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin card 6. -->
+                </div>
+            </div>
+            <!-- Fin de columna por 3 seccion -->
+        </section>
+
+
+        <!-- Comienzo del Footer -->
+        <footer class="footerLinks">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <!-- Navegacion entre paginas -->
+                        <section class="footerNav">
+                            <ul>
+                                <li><a href="index.html">Inicio</a></li>
+                                <li><a href="pages/quienesomos.html">Quienes Somos</a></li>
+                                <li><a href="pages/contactanos.html">Contactanos</a></li>
+                                <li><a href="pages/productos.html">Productos</a></li>
+                            </ul>
+                        </section>
+                    </div>
+                    <div class="col">
+                        <!-- Redes Sociales -->
+                        <section class="redesSociales">
+                            <ul class="listasRedes">
+                                <li><a
+                                        href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a>
+                                </li>
+                                <li><a href="https://www.facebook.com/">Facebook</a></li>
+                                <li><a href="https://www.instagram.com/">Instagram</a></li>
+                            </ul>
+                        </section>
+                    </div>
+                </div>
+        </footer>
+        <!-- Final del footer -->
+
+        <!-- Script de bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
+
+        <!-- Aos Script -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 
 </html>
