--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,175 +2,185 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Maker | Productos </title>
-    <meta name="description" content="Vea nuestros productos , solo son una muestra de lo que tenemos en nuestro stock , conozca mucho mas contactandonos para solitar presupuesto y asesoria">
-    <meta name="keywords" content="Productos , Muebles , Venta , Conozca , Comprar Muebles">
-    <!-- CSS Bootstrap -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Maker | Productos </title>
+  <meta name="description"
+    content="Vea nuestros productos , solo son una muestra de lo que tenemos en nuestro stock , conozca mucho mas contactandonos para solitar presupuesto y asesoria">
+  <meta name="keywords" content="Productos , Muebles , Venta , Conozca , Comprar Muebles">
+  <!-- CSS Bootstrap -->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    <!-- Mi CSS LINK -->
-    <link rel="stylesheet" href="../css/estilo.css">
+  <!-- Mi CSS LINK -->
+  <link rel="stylesheet" href="../css/estilo.css">
 
 </head>
 
 <body>
-    <!-- Nav bar -->
-    <header class="header">
-        <nav class="navbar headerNav navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
-                        data-aos-duration="500">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">|Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="quienesomos.html">|Quienes Somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contactanos.html">|Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="productos.html">|Productos</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <!-- Fin Nav bar -->
+  <!-- Nav bar -->
+  <header class="header">
+    <nav class="navbar headerNav navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html" data-aos="fade-right" data-aos-offset="300"
+          data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+            data-aos-duration="500">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">|Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quienesomos.html">|Quienes Somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactanos.html">|Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="productos.html">|Productos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- Fin Nav bar -->
 
-<img class="fondoPantalla" src="../images/Casas/casa1.jpg" alt="Casa exterior Anochecer">
+  <img class="fondoPantalla" src="../images/Casas/casa1.jpg" alt="Casa exterior Anochecer">
 
-<!-- Muestras de Productos -->
+  <!-- Muestras de Productos -->
 
-<div class="container text-center">
+  <div class="container text-center">
     <div class="row">
       <div class="col">
         <div class="card mb-3">
-            <img src="../images/Camas-Respaldo/cama4.jpg" class="card-img-top" alt="Cama Respaldo Rustico">
-            <div class="card-body">
-              <h5 class="card-title">Camas Con Respaldo</h5>
-              <p class="card-text">En nuestro Kit de Camas con respaldo incluimos los muebles adicionales: mesas y comodas.</p>
-              <p class="card-text"><small class="text-muted">Consulte modelos y colores disponibles</small></p>
-            </div>
+          <img src="../images/Camas-Respaldo/cama4.jpg" class="card-img-top" alt="Cama Respaldo Rustico">
+          <div class="card-body">
+            <h5 class="card-title">Camas Con Respaldo</h5>
+            <p class="card-text">En nuestro Kit de Camas con respaldo incluimos los muebles adicionales: mesas y
+              comodas.</p>
+            <p class="card-text"><small class="text-muted">Consulte modelos y colores disponibles</small></p>
           </div>
+        </div>
       </div>
       <div class="col">
         <div class="card mb-3">
-            <img src="../images/Kit-Baño/kit3.jpg" class="card-img-top" alt="Kit de espejo con luz led">
-            <div class="card-body">
-              <h5 class="card-title">Kit de Baño</h5>
-              <p class="card-text">Aqui en Home Maker nos gusta innovar con lo ultimo en moda y tecnologia para griferia y decoración de baños.</p>
-              <p class="card-text"><small class="text-muted">Optimizando tu baño</small></p>
-            </div>
+          <img src="../images/Kit-Baño/kit3.jpg" class="card-img-top" alt="Kit de espejo con luz led">
+          <div class="card-body">
+            <h5 class="card-title">Kit de Baño</h5>
+            <p class="card-text">Aqui en Home Maker nos gusta innovar con lo ultimo en moda y tecnologia para griferia y
+              decoración de baños.</p>
+            <p class="card-text"><small class="text-muted">Optimizando tu baño</small></p>
           </div>
+        </div>
       </div>
     </div>
 
     <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <div class="card mb-3">
-                <img src="../images/Mesada-Cocina/Mesada1.jpg" class="card-img-top" alt="Mesada de marmol blanco con isla flotante">
-                <div class="card-body">
-                  <h5 class="card-title">Cocinas Premium</h5>
-                  <p class="card-text">Sabemos que cocinar puede ser disgustante ,pero queremos que cocinar sea un entretenimiento con nuestros ultimos muebles para la gastronomia hogareña.</p>
-                  <p class="card-text"><small class="text-muted">Que cocinar sea un placer</small></p>
-                </div>
+      <div class="row">
+        <div class="col">
+          <div class="card mb-3">
+            <img src="../images/Mesada-Cocina/Mesada1.jpg" class="card-img-top"
+              alt="Mesada de marmol blanco con isla flotante">
+            <div class="card-body">
+              <h5 class="card-title">Cocinas Premium</h5>
+              <p class="card-text">Sabemos que cocinar puede ser disgustante ,pero queremos que cocinar sea un
+                entretenimiento con nuestros ultimos muebles para la gastronomia hogareña.</p>
+              <p class="card-text"><small class="text-muted">Que cocinar sea un placer</small></p>
+            </div>
           </div>
           <div class="col">
             <div class="card mb-3">
-                <img src="../images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top" alt="Mesa de Marmol con sillas grises">
-                <div class="card-body">
-                  <h5 class="card-title">Mesa y Sillas</h5>
-                  <p class="card-text">La sala de estar o living es un ambiente donde podemos dispersarnos con nuestros seres queridos por ello te ofrecemos lo nuevo en Mesas y sillas.</p>
-                  <p class="card-text"><small class="text-muted">Let's be confort and elegant</small></p>
-                </div>
-              </div>
-            
-          </div>
-        </div>
-
-        <div class="container text-center">
-            <div class="row">
-              <div class="col">
-                <div class="card mb-3">
-                    <img src="../images/Sillones/sillon 1.jpg" class="card-img-top" alt="Sillon Gris">
-                    <div class="card-body">
-                      <h5 class="card-title">Sillones y Sofa's</h5>
-                      <p class="card-text">A la hora de ver una pelicula , el partido ,o sencillamente juntarse a platicar ,con nuestros sillones podes pasar horas sin cansarte relajados en compañia.</p>
-                      <p class="card-text"><small class="text-muted">Maximo confort a tu servicio</small></p>
-                    </div>
-                  </div>
-              </div>
-              <div class="col">
-                <div class="card mb-3">
-                    <img src="../images//Tv-Mueble/Tv3.jpg" class="card-img-top" alt="Mueble tv madera">
-                    <div class="card-body">
-                      <h5 class="card-title">Muebles de Tv</h5>
-                      <p class="card-text">Al igual que el sillon, la television se luce y mas cuando tenes visitas con un mueble que lo porta con elegancia.</p>
-                      <p class="card-text"><small class="text-muted">Que ver tele sea un lujo</small></p>
-                    </div>
-                  </div>
+              <img src="../images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top" alt="Mesa de Marmol con sillas grises">
+              <div class="card-body">
+                <h5 class="card-title">Mesa y Sillas</h5>
+                <p class="card-text">La sala de estar o living es un ambiente donde podemos dispersarnos con nuestros
+                  seres queridos por ello te ofrecemos lo nuevo en Mesas y sillas.</p>
+                <p class="card-text"><small class="text-muted">Let's be confort and elegant</small></p>
               </div>
             </div>
-<!-- Fin de muestras de Productos -->
 
-<!-- Main Content -->
-<section class="mainContent mainContentProductos">
-    <Main>
-        <h1>Nuestra Pasión</h1>
-        <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
-        Tenemos muebles prefabricados , y tambien hacemos a medida en nuestro taller de artesanos.
-    Por que para nosotros el confort tuyo es nuestro deber !</p>
-    </Main>
+          </div>
+        </div>
 
-    <!-- Comienzo del Footer -->
-    <footer class="footerLinks">
         <div class="container text-center">
-        <div class="row">
-        <div class="col">
-        <!-- Navegacion entre paginas -->
-        <section class="footerNav">
-        <h2>Paginas</h2>
-        <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="quienesomos.html">Quienes Somos</a></li>
-        <li><a href="contactanos.html">Contactanos</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        </ul>
-        </section>
-        </div>
-        <div class="col">
-        <!-- Redes Sociales -->
-        <section class="redesSociales">
-        <h2>Redes Sociales</h2>
-        <ul class="listasRedes">
-        <li class="whatsapp"><a href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a></li>
-        <li class="facebook"><a href="https://www.facebook.com/">Facebook</a></li>
-        <li class="instagram"><a href="https://www.instagram.com/">Instagram</a></li>
-        </ul>
-        </section>
-        </div>
-        </div>
-        </footer>
+          <div class="row">
+            <div class="col">
+              <div class="card mb-3">
+                <img src="../images/Sillones/sillon 1.jpg" class="card-img-top" alt="Sillon Gris">
+                <div class="card-body">
+                  <h5 class="card-title">Sillones y Sofa's</h5>
+                  <p class="card-text">A la hora de ver una pelicula , el partido ,o sencillamente juntarse a platicar
+                    ,con nuestros sillones podes pasar horas sin cansarte relajados en compañia.</p>
+                  <p class="card-text"><small class="text-muted">Maximo confort a tu servicio</small></p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card mb-3">
+                <img src="../images//Tv-Mueble/Tv3.jpg" class="card-img-top" alt="Mueble tv madera">
+                <div class="card-body">
+                  <h5 class="card-title">Muebles de Tv</h5>
+                  <p class="card-text">Al igual que el sillon, la television se luce y mas cuando tenes visitas con un
+                    mueble que lo porta con elegancia.</p>
+                  <p class="card-text"><small class="text-muted">Que ver tele sea un lujo</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin de muestras de Productos -->
+
+          <!-- Main Content -->
+          <section class="mainContent mainContentProductos">
+            <Main>
+              <h1>Nuestra Pasión</h1>
+              <p>A continuación nuestros muebles y decoraciones con sus descripciones. <br>
+                Tenemos muebles prefabricados , y tambien hacemos a medida en nuestro taller de artesanos.
+                Por que para nosotros el confort tuyo es nuestro deber !</p>
+            </Main>
+
+            <!-- Comienzo del Footer -->
+            <footer class="footerLinks">
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col">
+                    <!-- Navegacion entre paginas -->
+                    <section class="footerNav">
+                      <h2>Paginas</h2>
+                      <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="quienesomos.html">Quienes Somos</a></li>
+                        <li><a href="contactanos.html">Contactanos</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                      </ul>
+                    </section>
+                  </div>
+                  <div class="col">
+                    <!-- Redes Sociales -->
+                    <section class="redesSociales">
+                      <h2>Redes Sociales</h2>
+                      <ul class="listasRedes">
+                        <li class="whatsapp"><a
+                            href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a>
+                        </li>
+                        <li class="facebook"><a href="https://www.facebook.com/">Facebook</a></li>
+                        <li class="instagram"><a href="https://www.instagram.com/">Instagram</a></li>
+                      </ul>
+                    </section>
+                  </div>
+                </div>
+            </footer>
             <!-- Final del footer -->
-    <!-- Script de bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+            <!-- Script de bootstrap -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+              integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+              crossorigin="anonymous"></script>
 </body>
 
 </html>
