--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Maker | Contact Us </title>
-    <meta name="description" content="Contacte con nosotros mediante Facebook , Instagram y Whatsapp , tambien puede dejar un mensaje con su correo y anotando su numero">
-<meta name="keywords" content="Contactanos , Redes Sociales , Facebook , Instagram , Whatsapp , Correo Electronico">
+    <meta name="description"
+        content="Contacte con nosotros mediante Facebook , Instagram y Whatsapp , tambien puede dejar un mensaje con su correo y anotando su numero">
+    <meta name="keywords" content="Contactanos , Redes Sociales , Facebook , Instagram , Whatsapp , Correo Electronico">
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -17,145 +18,148 @@
 
 </head>
 
-    <!-- Nav bar -->
-    <header class="header">
-        <nav class="navbar headerNav navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
-                        data-aos-duration="500">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">|Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="quienesomos.html">|Quienes Somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contactanos.html">|Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="productos.html">|Productos</a>
-                        </li>
-                    </ul>
-                </div>
+<!-- Nav bar -->
+<header class="header">
+    <nav class="navbar headerNav navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html" data-aos="fade-right" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+                    data-aos-duration="500">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">|Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="quienesomos.html">|Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactanos.html">|Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">|Productos</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
-    <!-- Fin Nav bar -->
+        </div>
+    </nav>
+</header>
+<!-- Fin Nav bar -->
 
-        <!-- Carrousel -->
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../images/Casas/casa4.jpg" class="carouselFondo d-block w-100"
-                        alt="Dormitorio minimalista">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/Casas/casa5.jpg" class="carouselFondo d-block w-100"
-                        alt="Living color verde">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/Casas/casa6.jpg" class="carouselFondo d-block w-100"
-                        alt="Living color rosa">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/Casas/casa7.jpg" class="carouselFondo d-block w-100"
-                        alt="Living color fuxia">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/Casas/casa3.jpg" class="carouselFondo d-block w-100"
-                        alt="Sala de estar ambientacion madera">
-                </div>
-    
-    
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </button>
+<!-- Carrousel -->
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../images/Casas/casa4.jpg" class="carouselFondo d-block w-100" alt="Dormitorio minimalista">
+        </div>
+        <div class="carousel-item">
+            <img src="../images/Casas/casa5.jpg" class="carouselFondo d-block w-100" alt="Living color verde">
+        </div>
+        <div class="carousel-item">
+            <img src="../images/Casas/casa6.jpg" class="carouselFondo d-block w-100" alt="Living color rosa">
+        </div>
+        <div class="carousel-item">
+            <img src="../images/Casas/casa7.jpg" class="carouselFondo d-block w-100" alt="Living color fuxia">
+        </div>
+        <div class="carousel-item">
+            <img src="../images/Casas/casa3.jpg" class="carouselFondo d-block w-100"
+                alt="Sala de estar ambientacion madera">
         </div>
 
 
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+    </button>
+</div>
 
 
-        <div class="col-lg-5 aos-init aos-animate" data-aos="fade">
-            <form action="forms/quote.php" method="post" class="php-email-form">
-            <h3>Contactanos</h3>
-            <p>Porfavor ingrese sus datos a continuacion detallando , intereses, consultas,dudas ,opiniones ,y el tipo de equipamiento que desea para su hogar.</p>
-            <div class="row gy-3">
+
+
+<div class="col-lg-5 aos-init aos-animate" data-aos="fade">
+    <form action="forms/quote.php" method="post" class="php-email-form">
+        <h3>Contactanos</h3>
+        <p>Porfavor ingrese sus datos a continuacion detallando , intereses, consultas,dudas ,opiniones ,y el tipo de
+            equipamiento que desea para su hogar.</p>
+        <div class="row gy-3">
             <div class="col-md-12">
-            <input type="text" name="name" class="form-control" placeholder="Nombre" required=""></div>
-            <div class="col-md-12 "> 
-            <input type="email" class="form-control" name="email" placeholder="Email" required="">
+                <input type="text" name="name" class="form-control" placeholder="Nombre" required="">
+            </div>
+            <div class="col-md-12 ">
+                <input type="email" class="form-control" name="email" placeholder="Email" required="">
             </div>
             <div class="col-md-12">
-            <input type="text" class="form-control" name="phone" placeholder="Telefono" required="">
+                <input type="text" class="form-control" name="phone" placeholder="Telefono" required="">
             </div>
-            <div class="col-md-12"><textarea class="form-control" name="message" rows="6" placeholder="Su Mensaje" required=""></textarea>
+            <div class="col-md-12"><textarea class="form-control" name="message" rows="6" placeholder="Su Mensaje"
+                    required=""></textarea>
             </div>
             <div class="col-md-12 text-center">
-            <div class="error-message">
+                <div class="error-message">
+                </div>
+                <button type="submit">Contactenos</button>
             </div>
-            <button type="submit">Contactenos</button></div></div></form></div>
-    <!-- Main Content -->
-    <section class="mainContent">
-        <Main class="noselopierda">
-            <h1>No se lo pierda</h1>
-            <p>Si desea mas informacion puede visitar nuestras redes sociales. <br>
-                Como tambien puede contactarnos a travez de nuestro mail, o puede contactarnos a nuestro Whatsapp de la
-                empresa.
-                Ofrecemos asesoria 24hs. <br>
-                Nuestros presupuestos son sin cargo y puede consultar cualquier duda que tenga, lo esperamos !</p>
-        </Main>
+        </div>
+    </form>
+</div>
+<!-- Main Content -->
+<section class="mainContent">
+    <Main class="noselopierda">
+        <h1>No se lo pierda</h1>
+        <p>Si desea mas informacion puede visitar nuestras redes sociales. <br>
+            Como tambien puede contactarnos a travez de nuestro mail, o puede contactarnos a nuestro Whatsapp de la
+            empresa.
+            Ofrecemos asesoria 24hs. <br>
+            Nuestros presupuestos son sin cargo y puede consultar cualquier duda que tenga, lo esperamos !</p>
+    </Main>
 
 
     <!-- Comienzo del Footer -->
     <footer class="footerLinks">
         <div class="container text-center">
             <div class="row">
-            <div class="col">
-            <!-- Navegacion entre paginas -->
-            <section class="footerNav">
-            <h2>Paginas</h2>
-            <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="quienesomos.html">Quienes Somos</a></li>
-            <li><a href="contactanos.html">Contactanos</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            </ul>
-            </section>
+                <div class="col">
+                    <!-- Navegacion entre paginas -->
+                    <section class="footerNav">
+                        <h2>Paginas</h2>
+                        <ul>
+                            <li><a href="../index.html">Inicio</a></li>
+                            <li><a href="quienesomos.html">Quienes Somos</a></li>
+                            <li><a href="contactanos.html">Contactanos</a></li>
+                            <li><a href="productos.html">Productos</a></li>
+                        </ul>
+                    </section>
+                </div>
+                <div class="col">
+                    <!-- Redes Sociales -->
+                    <section class="redesSociales">
+                        <h2>Redes Sociales</h2>
+                        <ul class="listasRedes">
+                            <li><a
+                                    href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a>
+                            </li>
+                            <li><a href="https://www.facebook.com/">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/">Instagram</a></li>
+                        </ul>
+                    </section>
+                </div>
             </div>
-            <div class="col">
-            <!-- Redes Sociales -->
-            <section class="redesSociales">
-            <h2>Redes Sociales</h2>
-            <ul class="listasRedes">
-            <li><a href="https://wa.me/1123991980?text=Chatea%20conmigo%20ahora%20para%20un%20presupuesto%20">Whatsapp</a></li>
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-            </ul>
-            </section>
-            </div>
-            </div>
-</footer>
-<!-- Final del footer -->
+    </footer>
+    <!-- Final del footer -->
 
-        <!-- Script de bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-</body>
+    <!-- Script de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    </body>
 
 </html>
