--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
 </head>
 
 <body>
-    <!-- Nav bar -->
-    <header class="header">
-        <nav class="navbar headerNav navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
-                        data-aos-duration="500">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">|Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/quienesomos.html">|Quienes Somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/contactanos.html">|Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/productos.html">|Productos</a>
-                        </li>
-                    </ul>
-                </div>
+<!-- Nav bar -->
+<header class="header">
+    <nav class="navbar headerNav navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html" data-aos="fade-right" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">| Home Maker Decoraciones |</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+                    data-aos-duration="500">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">|Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="quienesomos.html">|Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactanos.html">|Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">|Productos</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
-    <!-- Fin Nav bar -->
+        </div>
+    </nav>
+</header>
+<!-- Fin Nav bar -->
 
     <!-- Carrousel -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -115,7 +115,7 @@
         <!-- Fin Main Content -->
 
         <!-- MUESTRA DE PRODUCTOS A OFRECER -->
-        <section class="muestraProductos Cardshow">
+        <section data-aos="zoom-in-up" class="muestraProductos Cardshow">
             <h2 class="queofrecemos">Que Ofrecemos</h2>
 
 
@@ -124,7 +124,7 @@
             <div class="container text-center">
                 <div class="row">
                     <!-- Card 1. -->
-                    <div class="col">
+                    <div class="col cardItem">
                         <div class="card card1" style="width: 18rem;">
                             <img src="images/Mesas-Sillas/Mesa 4.jpg" class="card-img-top"
                                 alt="Mesa patas de madera con sillas">
@@ -137,7 +137,7 @@
                     </div>
                     <!-- Fin Card 1. -->
                     <!-- Card 2. -->
-                    <div class="col">
+                    <div class="col cardItem">
                         <div class="card card2" style="width: 18rem;">
                             <img src="images/Sillones/sillon 7.png" class="card-img-top" alt="Silon cuero negro">
                             <div class="card-body">
@@ -150,7 +150,7 @@
                     <!-- Fin Card 2. -->
 
                     <!-- Card 3. -->
-                    <div class="col">
+                    <div class="col cardItem">
                         <div class="card card3" style="width: 18rem;">
                             <img src="images/Tv-Mueble/Tv7.jpg" class="card-img-top"
                                 alt="Mueble de mesa madera prensada">
@@ -168,7 +168,7 @@
             <div class="container text-center">
                 <div class="row">
                     <!-- Card 4. -->
-                    <div class="col">
+                    <div class="col cardItem">
                         <div class="card card4" style="width: 18rem;">
                             <img src="images/Camas-Respaldo/cama7.jpg" class="card-img-top"
                                 alt="Cama con respaldo madera">
@@ -181,7 +181,7 @@
                     <!-- Fin card 4. -->
 
                     <!-- Card 5. -->
-                    <div class="col">
+                    <div class="col cardItem">
                         <div class="card card5" style="width: 18rem;">
                             <img src="images/Kit-Baño/kit4.jpg" class="card-img-top" alt="Baño equipado">
                             <div class="card-body">
@@ -194,7 +194,7 @@
 
 
                     <!-- Card 6. -->
-                    <div class="col">
+                    <div class="col cardItem">
                         <div class="card card6" style="width: 18rem;">
                             <img src="images/Mesada-Cocina/Mesada4.jpg" class="card-img-top" alt="Mesada marmol negro">
                             <div class="card-body">
